trunk/Archive2/67/371be2828b1afc/output
/usr/local/include/c++/4.9.0/future: In instantiation of 'std::__future_base::_Task_state<_Fn, _Alloc, _Res(_Args ...)>::_Impl::_Impl(_Fn2&&, const _Alloc&) [with _Fn2 = CopyOnly; _Fn = CopyOnly; _Alloc = std::allocator<int>; _Res = void; _Args = {}]':
/usr/local/include/c++/4.9.0/future:1291:41:   required from 'std::__future_base::_Task_state<_Fn, _Alloc, _Res(_Args ...)>::_Task_state(_Fn2&&, const _Alloc&) [with _Fn2 = CopyOnly; _Fn = CopyOnly; _Alloc = std::allocator<int>; _Res = void; _Args = {}]'
/usr/local/include/c++/4.9.0/ext/new_allocator.h:120:4:   required from 'void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = std::__future_base::_Task_state<CopyOnly, std::allocator<int>, void()>; _Args = {CopyOnly, const std::allocator<int>&}; _Tp = int]'
/usr/local/include/c++/4.9.0/bits/alloc_traits.h:253:4:   required from 'static std::_Require<typename std::allocator_traits<_Alloc>::__construct_helper<_Tp, _Args>::type> std::allocator_traits<_Alloc>::_S_construct(_Alloc&, _Tp*, _Args&& ...) [with _Tp = std::__future_base::_Task_state<CopyOnly, std::allocator<int>, void()>; _Args = {CopyOnly, const std::allocator<int>&}; _Alloc = std::allocator<int>; std::_Require<typename std::allocator_traits<_Alloc>::__construct_helper<_Tp, _Args>::type> = void]'
/usr/local/include/c++/4.9.0/bits/alloc_traits.h:399:57:   required from 'static decltype (_S_construct(__a, __p, (forward<_Args>)(std::allocator_traits::construct::__args)...)) std::allocator_traits<_Alloc>::construct(_Alloc&, _Tp*, _Args&& ...) [with _Tp = std::__future_base::_Task_state<CopyOnly, std::allocator<int>, void()>; _Args = {CopyOnly, const std::allocator<int>&}; _Alloc = std::allocator<int>; decltype (_S_construct(__a, __p, (forward<_Args>)(std::allocator_traits::construct::__args)...)) = <type error>]'
/usr/local/include/c++/4.9.0/bits/shared_ptr_base.h:516:38:   required from 'std::_Sp_counted_ptr_inplace<_Tp, _Alloc, _Lp>::_Sp_counted_ptr_inplace(_Alloc, _Args&& ...) [with _Args = {CopyOnly, const std::allocator<int>&}; _Tp = std::__future_base::_Task_state<CopyOnly, std::allocator<int>, void()>; _Alloc = std::allocator<int>; __gnu_cxx::_Lock_policy _Lp = (__gnu_cxx::_Lock_policy)2u]'
/usr/local/include/c++/4.9.0/ext/new_allocator.h:120:4:   [ skipping 4 instantiation contexts, use -ftemplate-backtrace-limit=0 to disable ]
/usr/local/include/c++/4.9.0/bits/shared_ptr_base.h:1090:35:   required from 'std::__shared_ptr<_Tp, _Lp>::__shared_ptr(std::_Sp_make_shared_tag, const _Alloc&, _Args&& ...) [with _Alloc = std::allocator<int>; _Args = {CopyOnly, const std::allocator<int>&}; _Tp = std::__future_base::_Task_state<CopyOnly, std::allocator<int>, void()>; __gnu_cxx::_Lock_policy _Lp = (__gnu_cxx::_Lock_policy)2u]'
/usr/local/include/c++/4.9.0/bits/shared_ptr.h:316:64:   required from 'std::shared_ptr<_Tp>::shared_ptr(std::_Sp_make_shared_tag, const _Alloc&, _Args&& ...) [with _Alloc = std::allocator<int>; _Args = {CopyOnly, const std::allocator<int>&}; _Tp = std::__future_base::_Task_state<CopyOnly, std::allocator<int>, void()>]'
/usr/local/include/c++/4.9.0/bits/shared_ptr.h:588:39:   required from 'std::shared_ptr<_Tp1> std::allocate_shared(const _Alloc&, _Args&& ...) [with _Tp = std::__future_base::_Task_state<CopyOnly, std::allocator<int>, void()>; _Alloc = std::allocator<int>; _Args = {CopyOnly, const std::allocator<int>&}]'
/usr/local/include/c++/4.9.0/future:1334:76:   required from 'std::shared_ptr<std::__future_base::_Task_state_base<_Signature> > std::__create_task_state(_Fn&&, const _Alloc&) [with _Signature = void(); _Fn = CopyOnly; _Alloc = std::allocator<int>]'
/usr/local/include/c++/4.9.0/future:1342:37:   required from 'std::shared_ptr<std::__future_base::_Task_state_base<_Res(_Args ...)> > std::__future_base::_Task_state<_Fn, _Alloc, _Res(_Args ...)>::_M_reset() [with _Fn = CopyOnly; _Alloc = std::allocator<int>; _Res = void; _Args = {}]'
main.cpp:19:1:   required from here
main.cpp:11:5: error: 'CopyOnly::CopyOnly(CopyOnly&&)' is private
     CopyOnly(CopyOnly&&) = delete;
     ^
In file included from main.cpp:1:0:
/usr/local/include/c++/4.9.0/future:1323:49: error: within this context
    : _Alloc(__a), _M_fn(std::forward<_Fn2>(__fn)) { }
                                                 ^
/usr/local/include/c++/4.9.0/future:1323:49: error: use of deleted function 'CopyOnly::CopyOnly(CopyOnly&&)'
main.cpp:11:5: note: declared here
     CopyOnly(CopyOnly&&) = delete;
     ^
